suppress output in .qmd for chunk

--- a/US_TDA.qmd
+++ b/US_TDA.qmd
@@ -25,6 +25,8 @@ editor: source
 ```{r}
 #| label: setup
 #| include: false
+#| echo: false
+#| eval: false
 
 # Load Packages and API Keys
 source(paste(getwd(), "scripts/systemConfig.R", sep = "/"))
