--- a/US_TDA.qmd
+++ b/US_TDA.qmd
@@ -164,7 +164,9 @@ We are including the differnt parts of gdp, c + g+ i + net exports
 - 0.546 & 0.547 have 4 components?
 - 0.61-0.625 2 components but the shape changes b/c of points moving around
 - 0.677-0.75 2 components and various combine of nodes
-
+- Most Interesting Epsilon Values:
+  - 
+  
 ### *Small Comparative Analysis*
 - "New Deal"
 - 08 financial crisis
